<resources>
    <string name="app_name">Sentinel</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="keep_me_signed">Keep me signed in</string>
    <string name="password_conf">Password Confirmation</string>
    <string name="register">Create Account</string>
    <string name="error_user_exists">The email addressed is already asssociated with an account!</string>
    <string name="error_invalid_email">Invalid email address!</string>
    <string name="building_a">Edifício A</string>
    <string name="dashboard">Dashboard</string>
    <string name="logout">Logout</string>
    <string name="account">Account</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="unauthenticated">Not logged in</string>
    <string name="tweet">Tweet</string>
    <string name="tweetHint">What\'s happening?</string>
    <string name="tweetMax">280</string>
    <string name="favorites">Favorites</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_message">Do you really wish to remove this location?</string>
    <string name="favoriteDialogTitle">Confirmation</string>
    <string name="no_favorites">No favorites added!</string>
    <string name="add_favorite">Add Favorite</string>
    <string name="send">Send</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="location">Guess My Location</string>
    <string name="no_exposure">No Exposure Data</string>
    <string name="my_exposure">My Exposure</string>
    <string name="avgTemp">AVG Temperature</string>
    <string name="avgHum">AVG Humidity</string>
    <string name="qoa">QoA</string>
    <string name="statistics">Statistics</string>
    <string name="last">Last:</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="table">Table</string>
    <string name="profile">Profile</string>
    <string name="oldPassword">Current Password</string>
    <string name="save">Save</string>
    <string name="clear_twitter_login">Clear Twitter Login</string>
    <string name="fcm_message">Sentinel Alert</string>
    <string name="default_notification_channel_name" translatable="true">Alerts</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="no_notifications">No notifications to show</string>
    <string name="toggle_on">ON</string>
    <string name="no_data_found">No Data Found</string>
    <string name="refresh_success">Refreshed Successfully</string>

</resources>
