<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard"/>
        <item android:id="@+id/nav_login"
            android:icon="@drawable/ic_account"
            android:title="@string/login"/>
        <item android:id="@+id/nav_register"
            android:icon="@drawable/ic_register"
            android:title="@string/register"/>
        <item android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_star_white"
            android:title="@string/favorites"/>

    </group>


    <item android:title="@string/account">
        <menu>
            <item android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout"/>


        </menu>

    </item>

</menu>