<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_bg"
    android:outlineProvider="bounds"
    android:paddingEnd="1dp"
    tools:context=".activities.TwitterPop_Activity">



    <View
        android:id="@+id/view"
        style="@style/Divider"
        android:layout_height="0.5dp"
        android:layout_marginTop="50dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnClose"
        android:layout_width="29dp"
        android:layout_height="31dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="#00FFFFFF"
        android:src="@drawable/ic_close_blue_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnTweet"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/btn_rounded"
        android:fontFamily="@font/roboto"
        android:text="@string/tweet"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputTweet"
        android:layout_width="380dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:gravity="top|left"
        android:hint="@string/tweetHint"
        android:inputType="textMultiLine"
        android:maxLength="@string/tweetMax"
        android:scrollbars="vertical"
        android:scrollHorizontally="false"
        android:singleLine="false"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/counterView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:text="0/280"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>